Start View implementation

--- a/Code/Desktop Client/EnterpriseMVVM.Data/EnterpriseMVVM.Data.csproj
+++ b/Code/Desktop Client/EnterpriseMVVM.Data/EnterpriseMVVM.Data.csproj
@@ -47,8 +47,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BusinessContext.cs" />
     <Compile Include="Customer.cs" />
-    <Compile Include="DomainContext.cs" />
+    <Compile Include="DataContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
