--- a/Tests/EnterpriseMVVM.Windows.Test/EnterpriseMVVM.Windows.Test.csproj
+++ b/Tests/EnterpriseMVVM.Windows.Test/EnterpriseMVVM.Windows.Test.csproj
@@ -35,6 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
   </ItemGroup>
@@ -51,6 +52,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="UnitTests\ActionCommandTests.cs" />
     <Compile Include="UnitTests\ObservableObjectTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTests\ViewModelTests.cs" />
